# rag-agentic-ai-toolkit

./: .gitignore  01-prompt-engineering-templates.py  01_prompt_engineering_templates.py  03-build-genai-app-langchain.py  AGENTS.md  Dockerfile  Makefile  README.md  compose.yaml  meeting_minutes_and_tasks.txt  pyproject.toml  requirements.txt
app/: main.py
app/schemas/: prompt_schemas.py
app/service/: prompt_service.py
app/services/: prompt_service.py
docs/: architecture.md
scripts/: generate_commit_message.ps1  start_dev.sh  start_prod.sh
spikes/: 02-gradio_llama_lab.py  03-loaded_documents_qa_bot_lab.py  README.md
spikes/01-prompting_lcel/: README.md  main.py
spikes/01-prompting_lcel_lab/: 01-prompting_lcel_lab.py  README.md  prompting_config.py  prompting_exercises.py  prompting_lcel.py  prompting_llm.py  prompting_reasoning.py
spikes/02-gradio_llama/: main.py
spikes/02-gradio_llama_lab/: 02-gradio_llama_lab.py  README.md  gradio_llama_model.py  gradio_llama_steps.py  gradio_llama_ui.py
spikes/03-rag_pdf_qa/: README.md
spikes/03-rag_pdf_qa_bot_lab/: 03-rag_pdf_qa_bot_lab.py  README.md  main.py  rag_bootstrap.py  rag_config.py  rag_document_pipeline.py  rag_models.py  rag_qa.py  rag_retrieval.py  rag_state.py  rag_ui.py
spikes/04-linkedin_icebreaker/: README.md
spikes/04-linkedin_icebreaker_bot_lab/: README.md  main.py
spikes/05-similarity_search/: README.md  main.py
spikes/05-similarity_search_by_hand_lab/: README.md
spikes/06-chromadb_cheat_sheet/: README.md
spikes/06-vector_databases_chromadb_cheat_sheet_lab/: README.md  main.py
spikes/07-employee_similarity/: README.md
spikes/07-employee_similarity_search_chromadb_lab/: README.md  main.py
spikes/08-food_recommendation_rag/: README.md  main.py
spikes/08-food_recommendation_systems_chromadb_rag_lab/: README.md
spikes/09-context_retrieval/: README.md
spikes/09-langchain_context_retrieval_lab/: README.md  main.py
spikes/10-advanced_retrievers/: README.md
spikes/10-advanced_retrievers_llamaindex_lab/: README.md  main.py
spikes/11-semantic_similarity/: README.md  main.py
spikes/11-semantic_similarity_faiss_lab/: README.md
spikes/12-youtube_rag_faiss/: README.md  main.py
spikes/12-youtube_summarizer_rag_faiss_lab/: README.md
spikes/13-story_generator_text_to_speech_lab/: README.md  main.py
spikes/13-story_tts/: README.md
spikes/14-basic_vision_multimodal_lab/: README.md  main.py
spikes/14-vision_multimodal/: README.md
spikes/15-ai_meeting_assistant_lab/: README.md  main.py
spikes/15-meeting_assistant/: README.md
spikes/16-dalle_generation/: README.md
spikes/16-dalle_image_generation_lab/: README.md  main.py
spikes/17-voice_assistant/: README.md  main.py
spikes/17-voice_desktop_assistant_lab/: README.md
spikes/18-langchain_tool_calling_math_assistant_lab/: README.md
spikes/18-tool_calling_math/: README.md  main.py
spikes/19-datawizard_ai_powered_data_analysis_lab/: README.md
spikes/19-datawizard_analysis/: README.md  main.py
spikes/20-interactive_agents/: README.md  main.py
spikes/20-interactive_llm_agents_with_tools_lab/: README.md
spikes/21-youtube_tool_agent/: README.md
spikes/21-youtube_tool_calling_agent_lab/: README.md  main.py
spikes/22-natural_language_data_visualization_agent_lab/: README.md
spikes/22-nl_data_viz/: README.md  main.py
spikes/23-natural_language_sql_agent_lab/: README.md
spikes/23-nl_sql/: README.md  main.py
spikes/24-langgraph_101_building_stateful_ai_workflows_lab/: README.md
spikes/24-langgraph_stateful_workflows/: README.md  main.py
spikes/25-building_reflection_agent_with_langgraph_lab/: README.md
spikes/25-reflection_agent/: README.md  main.py
spikes/26-building_reflection_agent_with_external_knowledge_integration/: README.md
spikes/26-reflection_external_knowledge/: README.md  main.py
spikes/27-react_build_reasoning_and_acting_ai_agents_with_langgraph/: README.md  main.py
spikes/27-react_langgraph_agents/: README.md
spikes/28-docchat_multi_agent_rag/: README.md  app.py  main.py
spikes/28-docchat_multi_agent_rag_system/: README.md
spikes/29-implement_workflow_patterns_with_langgraph/: README.md  main.py
spikes/29-langgraph_workflow_patterns/: README.md
spikes/30-build_langgraph_design_patterns_orchestration_evaluation/: README.md  main.py
spikes/30-langgraph_design_patterns/: README.md
spikes/31-crewai_101_building_multi_agent_ai_systems/: README.md
spikes/31-crewai_multi_agent/: README.md  main.py
spikes/32-meal_grocery_planner/: README.md  leftover.py
spikes/32-structured_meal_grocery_planner_with_crewai/: README.md  main.py
spikes/33-agents_with_tools_versus_tasks_with_tools_in_crewai/: README.md  main.py
spikes/33-crewai_tools_vs_tasks/: README.md
spikes/34-building_your_own_ai_nutrition_coach_using_a_multi_agent_system_and_multimodal_ai/: README.md
spikes/34-nutrition_coach_multi_agent/: README.md  app.py  main.py
spikes/35-beeai_agentic_systems/: README.md  t1.py  t10.py  t2.py  t4.py  t7.py
spikes/35-building_agentic_ai_systems_with_the_beeai_framework/: README.md  main.py  t11.py  t12.py  t3.py  t5.py  t6.py  t8.py  t9.py
spikes/36-ag2_101_complete_tutorial/: README.md  main.py
src/app/: main.py
tests/: conftest.py  test_api_smoke.py
(+612 files in other folders)
