# =============================================================================================
# Build System Configuration
# =============================================================================================

[build-system]
# Herramientas necesarias para construir el paquete.
requires = ["setuptools>=68", "wheel"]

# Backend que usará pip para construir el proyecto.
build-backend = "setuptools.build_meta"

# =============================================================================================
# Project Metadata
# =============================================================================================

[project]
# Descripción corta del proyecto.
description = "FastAPI toolkit for RAG and agentic AI workflows"

# Dependencias principales necesarias en runtime.
dependencies = [
  "fastapi>=0.134.0",
  "langchain>=0.3.0",
  "langchain-community>=0.3.27",
  "langchain-core>=0.3.0",
  "langchain-ollama>=0.3.0",
  "langgraph>=0.2.57,<0.3.0",
  "llama-index-core>=0.12.49",
  "llama-index-retrievers-bm25>=0.5.2",
  "chromadb>=1.5.5",
  "faiss-cpu>=1.13.2",
  "rank-bm25>=0.2.2",
  "PyStemmer>=2.2.0.3",
  "lark>=1.1.9,<2.0.0",
  "pydantic-settings>=2.0.0",
  "fastmcp>=2.12.5",
  "mcp>=1.16.0",
  "langchain-mcp-adapters>=0.1.9",
  "pypdf>=6.8.0",
  "uvicorn[standard]>=0.30.0",
]

# Nombre del paquete como aparecerá en PyPI.
name = "rag-agentic-ai-toolkit"

# Archivo README usado como descripción larga.
readme = "README.md"

# Versión mínima de Python requerida.
requires-python = ">=3.11"

# Versión actual del proyecto SemVer recomendado.
version = "0.1.0"

# =============================================================================================
# Setuptools Configuration
# =============================================================================================

[tool.setuptools]
# Indica que el código fuente está dentro de la carpeta src.
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
# Busca automáticamente paquetes dentro de src.
where = ["src"]

# =============================================================================================
# Pytest Configuration
# =============================================================================================

[tool.pytest.ini_options]
# Patrón de archivos que pytest reconocerá como test.
python_files = ["test_*.py"]

# Carpeta donde se encuentran los tests.
testpaths = ["tests"]
